# Anjay-esp32-client

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Makefile  NOTICE  README.md  nvs_config.csv  partitions.csv  sdkconfig.defaults
main/: CMakeLists.txt  Kconfig  axp192.c  axp192.h  bmpfile.h  component.mk  connect.c  connect.h  default_config.h  default_config.h.in  firmware_update.c  firmware_update.h  fontx.c  fontx.h  generate_version.cmake  i2c_wrapper.c  i2c_wrapper.h  lcd.c  lcd.h  main.c  main.h  st7789.c  st7789.h  utils.c  utils.h
main/anjay-config/anjay/: anjay_config.h
main/anjay-config/avsystem/coap/: avs_coap_config.h
main/anjay-config/avsystem/commons/: avs_commons_config.h  lwip-posix-compat.h
main/cellular_anjay_impl/: cellular_event_loop.c  cellular_event_loop.h  net_impl.c  net_impl.h
main/objects/: device.c  light_control.c  mpu6886.c  mpu6886.h  objects.h  push_button.c  sensors.c  wlan.c
